Tue Feb 22 07:25:18 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): identfier after dot must not be a variable.

Mon Feb 21 10:04:49 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* {bcc32,win32,wince}/Makefile.sub (config.h): add fcntl.

	* win32/win32.[ch] (fcntl): ditto.

	* win32/win32.c (rb_w32_connect): support nonblocking mode.

	* ext/socket/socket.c (wait_connectable, ruby_connect): support
	  nonblocking connect on various platforms.
	  all changes are backported from CVS HEAD. [ruby-core:3154],
	  [ruby-core:4364].

Sun Feb 20 00:48:48 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (URI::FTP#buffer_open): access mechanism
	  re-implemented according to RFC 1738.
	  reported by Guillaume Marcais.  [ruby-talk:131650]

Sat Feb 19 18:11:47 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRbObject#respond_to?): take two arguments.
	  [ruby-dev:25722]

	* test/drb/drbtest.rb: ditto.

Sat Feb 19 13:52:02 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb: call OpenSSL::SSL::SSLSocket#post_connection_check
	  after connection is made.

Sat Feb 19 01:32:03 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/bigdecimal/lib/bigdecimal/newton.rb: resolve LoadError.
	  [ruby-dev:25685]

	* ext/bigdecimal/sample/linear.rb: ditto.

	* ext/bigdecimal/sample/nlsolve.rb: ditto.

	* ext/bigdecimal/lib/bigdecimal/nlsolve.rb: removed because this file
	  is sample script and same file exists in ext/bigdecimal/sample.

Thu Feb 17 20:11:18 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/drb/drb.rb (DRbServer.default_safe_level): fix typo.

	* test/digest/test_digest.rb: separate test case for each algorithms.
	  (Thanks nobu) [ruby-dev:25412]

Thu Feb 17 11:54:00 2005  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/collector.rb (collect_file): now deletes paths added
	  to $LOAD_PATH instead of restoring it verbatim.

	* lib/test/unit/autorunner.rb (AutoRunner.run): fixed so that